force-app/main/default/objects/AAO_Pair__c/fields/AAO_About_Designator__c.field-meta.xml
<CustomField>
    <fullName>AAO_About_Designator__c</fullName>
    <description>Written by: call 1, only where the words are ABOUT a person other than the speaker. The DESIGNATOR (ruled 8 August, twenty-fourth stamp; carried into the two-read shape at the twenty-seventh): the name or the title as written in the transcript, or the name/title a pronoun resolved to in context. Never an org identity - resolution attaches those, this field never does. Null means the pair is about its own speaker, which is the default case and the reason speaker attachment is deterministic. ASR spellings preserved verbatim per the evidence law.</description>
    <label>About (Designator)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>