force-app/main/default/objects/AAO_Pair__c/fields/AAO_Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>AAO_Answer_Text__c</fullName>
    <description>Written by: call 1, verbatim. Read by: byte verification, call 2&apos;s context, call 3&apos;s blind read, and every citation shown to a human. THE ANCHOR. Located in the frozen artifact by exact byte match, character for character. Zero matches discards the pair and increments a counter (unit: pairs) rather than writing a row. This field is why the v2.6 anchor ledger does not exist.</description>
    <label>Answer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>