force-app/main/default/objects/AAO_Pair__c/fields/AAO_Artifact_SHA256__c.field-meta.xml
<CustomField>
    <fullName>AAO_Artifact_SHA256__c</fullName>
    <description>Written by: call 1, from the Source. Read by: anything re-verifying the offsets. A byte offset means nothing without the artifact it indexes, and this build has already met two fingerprints for one file. The stored form is canonical, per the normalizer&apos;s output contract.</description>
    <label>Artifact SHA256</label>
    <length>64</length>
    <type>Text</type>
</CustomField>