force-app/main/default/objects/AAO_Pair__c/fields/AAO_Charter__c.field-meta.xml
<CustomField>
    <fullName>AAO_Charter__c</fullName>
    <description>Written by: each call. Read by: the recall gate, which re-runs on any call 1 charter change, and needs to know which charter a stored pair came from to say whether it still counts.</description>
    <label>Charter</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>