force-app/main/default/objects/AAO_Pair__c/fields/AAO_Claim__c.field-meta.xml
<CustomField>
    <fullName>AAO_Claim__c</fullName>
    <description>Written by: Commit. Read by: which claim this pair became. Null on every pair that did not promote, which is most of them and is not a failure.</description>
    <label>Claim</label>
    <type>Lookup</type>
    <referenceTo>AAO_Claim__c</referenceTo>
    <relationshipName>AAO_Pairs</relationshipName>
    <relationshipLabel>AAO Pairs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>