force-app/main/default/objects/AAO_Pair__c/fields/AAO_Corroborated__c.field-meta.xml
<CustomField>
    <fullName>AAO_Corroborated__c</fullName>
    <description>Set by the resolution stage where BOTH comprehensive reads found this establishment: same contract, byte-range intersection, same voiced meaning (the merge key, twenty-seventh stamp - never string equality on quotes). A marker, never a gate: a pair only one read found stands, because the union is the recall hedge and corroboration is extra confidence, not a requirement. The absorbed read&apos;s row keeps its own receipt under a Merged disposition.</description>
    <label>Corroborated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>