force-app/main/default/objects/AAO_Pair__c/fields/AAO_Coverage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Coverage__c</fullName>
    <description>Written by: call 1, on fact families only. Read by: partial-evidence accrual. Full when the words carry every element, Partial when they carry some. Partial is the instructed default under doubt, because a partial accrues safely and places nobody. BLANK ON SENTIMENT BY DESIGN: a sentiment read is whole and accumulation is the counter&apos;s job, per P8.4, so there is no partial to record.</description>
    <label>Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>