force-app/main/default/objects/AAO_Pair__c/fields/AAO_Criterion_Match_Same_Mouth__c.field-meta.xml
<CustomField>
    <defaultValue>false</defaultValue>
    <fullName>AAO_Criterion_Match_Same_Mouth__c</fullName>
    <description>TRUE where this naming pair matched a standing criterion THE SAME PERSON already voiced. The hundred-twenty-fourth: a criterion voiced by a DIFFERENT mouth is the same criterion REINFORCED, and the SAME mouth restating it is IGNORED - no row, no counter theatre. Two different dispositions of one match, so the match alone cannot decide and the mouth travels with it.</description>
    <label>Criterion Match Same Mouth</label>
    <type>Checkbox</type>
</CustomField>