force-app/main/default/objects/AAO_Pair__c/fields/AAO_Disposition__c.field-meta.xml
<CustomField>
    <fullName>AAO_Disposition__c</fullName>
    <description>Written by: the resolution stage (call 2 until the twenty-seventh stamp). Read by: the gates; Ambiguous routes to the Identification flag. Exactly one per located pair, which is the one-for-one-for-one arithmetic. None and Ambiguous are NOT abstention rows: they say what happened to a pair that exists, never that the transcript was silent. Merged (twenty-seventh stamp) says the pair&apos;s establishment rides another read&apos;s canonical row, both receipts kept - a disposition, so the arithmetic still counts it. Blank on a Located row, required on an Identified row.</description>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>