force-app/main/default/objects/AAO_Pair__c/fields/AAO_End_Offset__c.field-meta.xml
<CustomField>
    <fullName>AAO_End_Offset__c</fullName>
    <description>Written by: byte location, in Apex, never by the model. Read by: re-verification and the context window. END-EXCLUSIVE, matching AAO_Model.Span.</description>
    <label>End Offset</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>