force-app/main/default/objects/AAO_Pair__c/fields/AAO_Evidence_Contract__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: call 1. Read by: the gates, and coverage arithmetic. The declared question these words answer. A pair against no contract is a pair against an undeclared question, which the declared-set law forbids.</description>
    <label>Evidence Contract</label>
    <referenceTo>AAO_Evidence_Contract__c</referenceTo>
    <relationshipLabel>AAO Pairs</relationshipLabel>
    <relationshipName>AAO_Pairs</relationshipName>
    <type>Lookup</type>
</CustomField>