force-app/main/default/objects/AAO_Pair__c/fields/AAO_Identification_Basis__c.field-meta.xml
<CustomField>
    <fullName>AAO_Identification_Basis__c</fullName>
    <description>Written by: call 2. Read by: a human auditing an identification. One sentence, per the schema: spoken by them, said about them by name, answered when addressed. It carries no identity in free text; the identity is the lookup.</description>
    <label>Identification Basis</label>
    <type>Text</type>
    <length>255</length>
</CustomField>