force-app/main/default/objects/AAO_Pair__c/fields/AAO_Meaning__c.field-meta.xml
<CustomField>
    <fullName>AAO_Meaning__c</fullName>
    <description>Written by: call 1. Read by: the derivations. The state the words voice, one direction, from the family&apos;s runtime-closed set. Never a false, never an inversion, never a two-sided verdict: true-or-nothing, so words either voice the question&apos;s own direction or produce no pair at all. Text rather than a picklist because the closed set differs per family and is composed at runtime; the closing is code&apos;s job, not the field&apos;s.</description>
    <label>Meaning</label>
    <type>Text</type>
    <length>128</length>
</CustomField>