force-app/main/default/objects/AAO_Pair__c/fields/AAO_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>AAO_Occurrence__c</fullName>
    <description>Written by: byte location. Read by: the sidecar timestamp lookup and any per-turn context window. WHICH MATCH THIS IS, one-based. Required by ruling: a verbatim string matching more than once anchors every occurrence, so a pair must say which one it is or the timestamp and the surrounding turns are ambiguous. On the 17 June fixture it will almost always be 1, which is not an argument for leaving it off.</description>
    <label>Occurrence</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>