force-app/main/default/objects/AAO_Pair__c/fields/AAO_Occurrence_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Occurrence_Count__c</fullName>
    <description>Written by: byte location. Read by: any reader deciding how much care an anchor needs. How many matches the verbatim string had in the whole artifact. Occurrence 1 of 1 and occurrence 1 of 3 are different facts and the second is the one where the words were said more than once. Zero matches never produces a row at all.</description>
    <label>Occurrence Count</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>