force-app/main/default/objects/AAO_Pair__c/fields/AAO_Pair_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Pair_Key__c</fullName>
    <description>Written by: AAO_PairTrigger via AAO_PairKey, frozen composer. Read by: the upsert target, and the database. The key carries the stage, so a second identification of the same located pair collides on a unique index rather than on a count query: one-for-one-for-one enforced by the platform, which cannot race and cannot be forgotten.</description>
    <label>Pair Key</label>
    <type>Text</type>
    <length>67</length>
    <caseSensitive>true</caseSensitive>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>