force-app/main/default/objects/AAO_Pair__c/fields/AAO_Pair_Ref__c.field-meta.xml
<CustomField>
    <fullName>AAO_Pair_Ref__c</fullName>
    <description>Written by: call 1, as the model returned it. Read by: call 2&apos;s dispositions, which bind to it one for one. The model&apos;s own handle on the pair, kept verbatim so a disposition that names a ref we never emitted is detectable as our bug per the parse law, rather than being quietly matched by position.</description>
    <label>Pair Ref</label>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>