force-app/main/default/objects/AAO_Pair__c/fields/AAO_Run_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Run_Key__c</fullName>
    <description>Written by: the pass, once per run. Read by: the one-for-one-for-one arithmetic, which is per run and meaningless across runs, and by the run receipt when that object exists. Carried as text now so the receipt can join later without backfilling a corpus.</description>
    <label>Run Key</label>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
</CustomField>