force-app/main/default/objects/AAO_Pair__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <description>Written by: call 1. Read by: byte verification, which resolves the normalized text through it. The frozen artifact the offsets index.</description>
    <label>Source</label>
    <type>Lookup</type>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipName>AAO_Pairs</relationshipName>
    <relationshipLabel>AAO Pairs</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>