force-app/main/default/objects/AAO_Pair__c/fields/AAO_Speaker_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Speaker_Key__c</fullName>
    <description>Written by: byte location, derived from the offsets and the roster, in Apex. Read by: the speaker-requirement gates, which run after identification. NOT written by call 1: whose turn contains a byte range is arithmetic over the normal form, and the model is never asked a question the text already answers.</description>
    <label>Speaker Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>