force-app/main/default/objects/AAO_Pair__c/fields/AAO_Stage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Stage__c</fullName>
    <description>Written by: call 1 (Located) and call 2 (Identified). Read by: everything that counts a stage in isolation. EXPLICIT BY RULING, never inferred from whether the parent lookup is null: this build already carries a scar from a state with two physical shapes (the unanswered answer row), and inferring stage from a null lookup rebuilds it. Distinct from AAO_Disposition__c: stage says which call wrote this row, disposition says what call 2 concluded.</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Located</fullName>
            </value>
            <value>
                <fullName>Identified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>