force-app/main/default/objects/AAO_Pair__c/fields/AAO_Start_Offset__c.field-meta.xml
<CustomField>
    <fullName>AAO_Start_Offset__c</fullName>
    <description>Written by: byte location, in Apex, never by the model. Read by: re-verification and the context window. Character offset into AAO_Normalized_Text__c, zero-based, matching AAO_Model.Span so the two locators cannot drift apart.</description>
    <label>Start Offset</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>