force-app/main/default/objects/AAO_Pair__c/fields/AAO_Synthetic__c.field-meta.xml
<CustomField>
    <fullName>AAO_Synthetic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Written by: the demo seeder, via AAO_Synthetic.MARK. Read by: AAO_Demo.purge, which deletes only rows carrying it, and by the delete law, which is the only thing that lets a pair be deleted at all. Operational marker; no law reads it beyond that.</description>
    <label>Synthetic</label>
    <type>Checkbox</type>
</CustomField>