force-app/main/default/objects/AAO_Pair__c/fields/AAO_Verification__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verification__c</fullName>
    <description>Written by: call 3, the blind reader, on the identified row. Read by: the gates, which promote only what it upheld. Blank until call 3 has seen it. STAMPED PER ROW rather than summarised per pair, which is defect D1&apos;s lesson taken at the object level: AAO_Interpretation__c was one field and kept only the last refusal, so 2 of the 3 August run&apos;s 9 item-refusals were overwritten and unrecoverable.</description>
    <label>Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upheld</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>