force-app/main/default/objects/AAO_Pair__c/fields/AAO_Verification_Note__c.field-meta.xml
<CustomField>
    <fullName>AAO_Verification_Note__c</fullName>
    <description>Written by: call 3. Read by: the refusal grading, which is how a call-3 charter earns a change. The reader&apos;s reason in its own words. One row per pair means one note per pair with nothing to overwrite.</description>
    <label>Verification Note</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>